// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AuthorProfile snapshot testing matches snapshot with all props 1`] = `
<div>
  <div
    class="mt-16 pt-8 border-t border-neutral-200 dark:border-neutral-800"
    data-testid="author-profile"
  >
    <div
      class="flex items-start space-x-4"
    >
      <img
        alt="Jisoo Pyo"
        class="rounded-full"
        data-testid="author-avatar"
        height="64"
        src="https://api.dicebear.com/7.x/initials/svg?seed=JP"
        width="64"
      />
      <div
        class="flex-1"
      >
        <p
          class="font-semibold text-neutral-900 dark:text-neutral-100"
          data-testid="author-name"
        >
          Jisoo Pyo Sir
        </p>
        <p
          class="mt-1 text-sm text-neutral-600 dark:text-neutral-400"
          data-testid="author-bio"
        >
          일단 시작.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorProfile snapshot testing matches snapshot with different author data 1`] = `
<div>
  <div
    class="mt-16 pt-8 border-t border-neutral-200 dark:border-neutral-800"
    data-testid="author-profile"
  >
    <div
      class="flex items-start space-x-4"
    >
      <img
        alt="John Smith"
        class="rounded-full"
        data-testid="author-avatar"
        height="64"
        src="https://different-avatar.com/image.png"
        width="64"
      />
      <div
        class="flex-1"
      >
        <p
          class="font-semibold text-neutral-900 dark:text-neutral-100"
          data-testid="author-name"
        >
          John Smith, PhD
        </p>
        <p
          class="mt-1 text-sm text-neutral-600 dark:text-neutral-400"
          data-testid="author-bio"
        >
          Full-stack developer with passion for open source
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorProfile snapshot testing matches snapshot with required props only 1`] = `
<div>
  <div
    class="mt-16 pt-8 border-t border-neutral-200 dark:border-neutral-800"
    data-testid="author-profile"
  >
    <div
      class="flex items-start space-x-4"
    >
      <img
        alt="Jisoo Pyo"
        class="rounded-full"
        data-testid="author-avatar"
        height="64"
        src="https://api.dicebear.com/7.x/initials/svg?seed=JP"
        width="64"
      />
      <div
        class="flex-1"
      >
        <p
          class="font-semibold text-neutral-900 dark:text-neutral-100"
          data-testid="author-name"
        >
          Jisoo Pyo
        </p>
        <p
          class="mt-1 text-sm text-neutral-600 dark:text-neutral-400"
          data-testid="author-bio"
        >
          일단 시작.
        </p>
      </div>
    </div>
  </div>
</div>
`;
